cmake_minimum_required(VERSION 3.1)
project(Capture CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O2")
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
add_library(parser STATIC parser.cpp)
add_executable(capture main.cpp)
target_link_libraries(capture parser tins redis-cpp pthread)