cmake_minimum_required(VERSION 3.1)
project(Capture CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O2")
set(LIBTINS_ENABLE_CXX11 1)
set(LIBTINS_BUILD_SHARED 0)
add_subdirectory(libtins)
add_subdirectory(redis-cpp)
add_subdirectory(parser)
include_directories(include)
include_directories(libtins/include)
include_directories(redis-cpp/include)
include_directories(parser)
add_executable(capture capture.cpp)
target_link_libraries(capture parser tins redis-cpp pthread)
